# holdthedoor

./: Cargo.toml  db.json
src/: cli.rs  main.rs  util.rs  web.rs
static/: app.js  index.html  person_add.html
templates/: newperson.html.hbs
templates/people/: add.html.hbs  list.html.hbs
templates/rules/: list.html.hbs
