[package]
name = "holdthedoor"
version = "0.1.0"
authors = ["Maxwell Bernstein <tekknolagi@gmail.com>"]

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "web"
path = "src/web.rs"

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
chrono = { version = "0.3", features = ["serde"] }
time = "*"
jfs = "0.3.0"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
rocket_contrib = { version = "0.2.6", features = ["handlebars_templates"] }
